# Nova

./: .gitmodules  CMakeLists.txt  README.md
Nova/: CMakeLists.txt
Nova/include/: Application.h  Core.h  EntryPoint.h  Nova.h
Nova/src/: Application.cpp
NovaEditer/: CMakeLists.txt  EditerLayer.cpp  EditerLayer.h  NVEditerApp.cpp  Nova.h
NovaEditer/assert/shaders/: test.glsl
NovaEditor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  NVEditerApp.cpp
Novar/: CMakeLists.txt  Nova.h  PCH.h
Novar/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Nova.h  PCH.h  PlatformDetection.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Novar/Debug/: Instrumentor.h
Novar/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Novar/Imgui/: ImguiBuild.cpp  ImguiLayer.cpp  ImguiLayer.h
Novar/Physics/: Physics2D.cpp  Physics2D.h
Novar/PlatForm/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Novar/PlatForm/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Novar/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Novar/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraControl.cpp  OrthographicCameraControl.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Novar/Scene/: Components.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneHierachyPanel.cpp  SceneHierachyPanel.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Novar/Utils/: PlatformUtils.h
Novar/assert/shaders/: blue.glsl  circle.glsl  line.glsl  quad.glsl  texture.glsl
SandBox/: CMakeLists.txt  ExampleLayer.h  SandBoxApp.cpp  Sandbox2D.cpp  Sandbox2D.h
SandBox/assert/shaders/: flat.glsl  texture.glsl
